...

import UIKit

class SearchVC: UIViewController {
    
    let logoImageView = UIImageView()
    let usernameTextField = GFUsernameTextField()
    let callToActionButton = GFButton(backgroundColor: .systemGreen, title: "Get Followers")
    
    var isUsernameEntered: Bool {
        return !usernameTextField.text!.isEmpty
    }

...
        setupUserNameTextField()
        setupCallToActionButton()
        dismissKeyboardTapGesture()
        
        logoImageView.accessibilityIdentifier = "homeLogo"
        usernameTextField.accessibilityIdentifier = "usernameTextField"
        callToActionButton.accessibilityIdentifier = "searchButton"

    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        navigationController?.setNavigationBarHidden(true, animated: true)
...
